# palignprims

./: LICENSE  README.md  backtracker.h  backtracker_2.h  benchmark-tiny-alignment.cpp  directed_graph.h  doxyfile  graph_helpers.h  grid_graph.h  grid_graph_4.h  grid_graph_diagonal.h  grid_graph_down.h  grid_graph_right.h  library.h  main.cpp  meson.build  pairwise_extended_gap_alignment_graph.h  pairwise_fitting_alignment_graph.h  pairwise_global_alignment_graph.h  pairwise_local_alignment_graph.h  source_check.py  source_checker.py  source_doxygen_runner.py
.github/workflows/: run-tests.yml
.github/workflows/setup-linux-gcc/: action.yml
.github/workflows/setup-macos-gcc/: action.yml
.github/workflows/setup-windows-msvc/: action.yml
offbynull/: concepts.h  utils.h
offbynull/aligner/: aligner.h  aligner_test.cpp  concepts.h
offbynull/aligner/aligners/: concepts.h  extended_gap_dynamic_programming_alignment_type_parameterizer.h  extended_gap_dynamic_programming_heap_aligner.h  extended_gap_dynamic_programming_heap_aligner_test.cpp  extended_gap_dynamic_programming_stack_aligner.h  extended_gap_dynamic_programming_stack_aligner_test.cpp  extended_gap_sliced_subdivision_heap_aligner.h  extended_gap_sliced_subdivision_heap_aligner_test.cpp  extended_gap_sliced_subdivision_stack_aligner.h  extended_gap_sliced_subdivision_stack_aligner_test.cpp  fitting_dynamic_programming_alignment_type_parameterizer.h  fitting_dynamic_programming_heap_aligner.h  fitting_dynamic_programming_heap_aligner_test.cpp  fitting_dynamic_programming_stack_aligner.h  fitting_dynamic_programming_stack_aligner_test.cpp  fitting_sliced_subdivision_heap_aligner.h  fitting_sliced_subdivision_heap_aligner_test.cpp  fitting_sliced_subdivision_stack_aligner.h  fitting_sliced_subdivision_stack_aligner_test.cpp  global_dynamic_programming_alignment_type_parameterizer.h  global_dynamic_programming_heap_aligner.h  global_dynamic_programming_heap_aligner_test.cpp  global_dynamic_programming_stack_aligner.h  global_dynamic_programming_stack_aligner_test.cpp  global_sliced_subdivision_heap_aligner.h  global_sliced_subdivision_heap_aligner_test.cpp  global_sliced_subdivision_stack_aligner.h  global_sliced_subdivision_stack_aligner_test.cpp  internal_utils.h  local_dynamic_programming_alignment_type_parameterizer.h  local_dynamic_programming_heap_aligner.h  local_dynamic_programming_heap_aligner_test.cpp  local_dynamic_programming_stack_aligner.h  local_dynamic_programming_stack_aligner_test.cpp  local_sliced_subdivision_heap_aligner.h  local_sliced_subdivision_heap_aligner_test.cpp  local_sliced_subdivision_stack_aligner.h  local_sliced_subdivision_stack_aligner_test.cpp  overlap_dynamic_programming_alignment_type_parameterizer.h  overlap_dynamic_programming_heap_aligner.h  (+16 more)
offbynull/aligner/backtrack/: allocator.h  allocators.h  backtrack.h  backtrack_test.cpp  container_creator.h  container_creators.h  ready_queue.h  sliced_backtrack.h  sliced_backtrack_test.cpp  sliced_walker.h  sliced_walker_test.cpp  slot_container.h
offbynull/aligner/graph/: graph.h  grid_allocators.h  grid_container_creators.h  multithreaded_sliceable_pairwise_alignment_graph.h  multithreaded_sliceable_pairwise_alignment_graph_test.cpp  pairwise_alignment_graph.h  sliceable_pairwise_alignment_graph.h  sliceable_pairwise_alignment_graph_test.cpp  utils.h  utils_test.cpp
offbynull/aligner/graphs/: directed_graph.h  directed_graph_test.cpp  grid_graph.h  grid_graph_test.cpp  middle_sliceable_pairwise_alignment_graph.h  middle_sliceable_pairwise_alignment_graph_test.cpp  pairwise_extended_gap_alignment_graph.h  pairwise_extended_gap_alignment_graph_test.cpp  pairwise_fitting_alignment_graph.h  pairwise_fitting_alignment_graph_test.cpp  pairwise_global_alignment_graph.h  pairwise_global_alignment_graph_test.cpp  pairwise_local_alignment_graph.h  pairwise_local_alignment_graph_test.cpp  pairwise_overlap_alignment_graph.h  pairwise_overlap_alignment_graph_test.cpp  prefix_sliceable_pairwise_alignment_graph.h  prefix_sliceable_pairwise_alignment_graph_test.cpp  reversed_sliceable_pairwise_alignment_graph.h  reversed_sliceable_pairwise_alignment_graph_test.cpp  suffix_sliceable_pairwise_alignment_graph.h  suffix_sliceable_pairwise_alignment_graph_test.cpp
offbynull/aligner/scorer/: scorer.h
offbynull/aligner/scorers/: blosum45_scorer.h  blosum45_scorer_test.cpp  blosum50_scorer.h  blosum50_scorer_test.cpp  blosum62_scorer.h  blosum62_scorer_test.cpp  blosum80_scorer.h  blosum80_scorer_test.cpp  blosum90_scorer.h  blosum90_scorer_test.cpp  blosum_scorer.h  blosum_scorer_test.cpp  constant_scorer.h  constant_scorer_test.cpp  consumption_gating_scorer.h  consumption_gating_scorer_test.cpp  levenshtein_scorer.h  levenshtein_scorer_test.cpp  pam250_scorer.h  pam250_scorer_test.cpp  pam30_scorer.h  pam30_scorer_test.cpp  pam70_scorer.h  pam70_scorer_test.cpp  pam_scorer.h  pam_scorer_test.cpp  qwerty_scorer.h  qwerty_scorer_test.cpp  simple_scorer.h  simple_scorer_test.cpp  single_character_substitution_matrix_scorer.h  single_character_substitution_matrix_scorer_test.cpp  substitution_map_scorer.h  substitution_map_scorer_test.cpp  (+4 more)
offbynull/helpers/: blankable_bidirectional_view.h  blankable_bidirectional_view_test.cpp  concat_bidirectional_view.h  concat_bidirectional_view_test.cpp  concat_view.h  concat_view_test.cpp  container_creators.h  filter_bidirectional_view.h  filter_bidirectional_view_test.cpp  forkable_thread_pool.h  forkable_thread_pool_test.cpp  join_bidirectional_view.h  join_bidirectional_view_test.cpp  movable_box.h  simple_value_bidirectional_view.h  simple_value_bidirectional_view_test.cpp  unordered_thread_pool.h  unordered_thread_pool_test.cpp
tests/: test_backtracker.cpp  test_backtracker_2.cpp  test_directed_graph.cpp  test_grid_graph.cpp  test_grid_graph_4.cpp  test_grid_graph_diagonal.cpp  test_grid_graph_down.cpp  test_grid_graph_right.cpp  test_pairwise_extended_gap_alignment_graph.cpp  test_pairwise_fitting_alignment_graph.cpp  test_pairwise_global_alignment_graph.cpp  test_pairwise_local_alignment_graph.cpp
(+135 files in other folders)
